--- a/config/west.yml
+++ b/config/west.yml
@@ -9,7 +9,7 @@ manifest:
       clone-depth: 1
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: 0.1.0
       import: app/west.yml
   self:
     path: config
